K8s_Deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: k8s-deployment
  name: boardgame-svc
spec:
  type: ClusterIP
  selector:
    app: boardgame
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
